version 3.0.1-SNAPSHOT, upped deps, added release notes